--- a/treelink/src/style.css
+++ b/treelink/src/style.css
@@ -59,9 +59,10 @@ button:focus-visible {
 }
 
 #app {
+  font-family: 'Roboto', sans-serif;
+  margin: 0 auto;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
