--- a/treelink/src/style.css
+++ b/treelink/src/style.css
@@ -23,9 +23,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 70px 0 0 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -62,7 +61,6 @@ button:focus-visible {
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
   max-width: 1280px;
-  margin: 0 auto;
   text-align: center;
 }
 
